@@ -1,3 +1,8 @@
+Wed Oct  9 15:32:20 2002  Owen Taylor  <otaylor@redhat.com>
+
+	* xsettings.xml: Add the spec (prior to converting
+	to DocBook XML)
+
 Tue Oct  8 19:19:37 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* xsettings-common.c (xsettings_setting_free): Fre
